Refactor payment processing and improve ID generation (#30)
* Feature/vnd 7 spring mit datenbank verbinden (#1) (#2)

* VND-7 Added secret application properties file that is gitignored and importing it via application.properties to establish database connection

* VND-7 establish database connection and create sample objects

* VND-25 formatting with google-java-format (#4)

* Feature/vnd 26 spring web security and basic user authentication with jwt VND-26 (#5)

* VND-26 first approach of JWT based user authentication and user/permission management

* VND-26 adding Services and configuring endpoints

* Fixing AuthTokenFilter and AuthEntryPoint, enhancing global exception handling

* Changing return value of #validateToken

* Feature/vnd 79 user persistence and rest controllers VND-79 (#6)

* Implementing PUT/POST methods on RoleController, removing anonymous interface implementation for IRole, minor changes to other files

* Added option to see all roles or specific role by id. VND-79

* Prohibit role id change

* Remove anonymous interface implementation

* Excluded inactive roles from token-generation. VND-79

* Added option to deactivate roles by id with DELETE-statement and ensured that all details are only changed when they differ from current status. VND-79

* Updates to UserControllerV1

* Added option to get a list of all users as an admin as well as changing user-information. VND-79

* Implementing locking and enabling users

* Cleanup code and ensure single responsibility principle

* Removed unused imports

* Code cleanup and documentation

* Single responsibility principle for AuthenticationControllerV1

---------

Co-authored-by: soenkevogelsberg@gmx.de <soenkevogelsberg@gmx.de>

* Vnd 116 artikelstammdatenverwaltung (#8)

* VND-116 basic master data management for ProductCategory and Brand

* VND-116

* created SupplierDTO and SupplierFactory. VND-116

* VND-116 Really strange and stupid mud ball commit sorry Luke

---------

Co-authored-by: soenkevog